--- a/default.hbs
+++ b/default.hbs
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     {{! Document Settings }}
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     {{! Page Meta }}
+    {{custom.meta}}
+    
     <title>{{meta_title}}</title>
-    <meta name="author" content="{{meta_author}}">
-    <meta name="keywords" content="{{meta_keywords}}" />
     <meta name="description" content="{{meta_description}}" />
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     {{! Ghost outputs important style and meta data with this tag }}
@@ -28,7 +30,8 @@
         {{{body}}}
 
         <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>            
+            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>    
+            <section class="poweredby">Ghostium Theme by <a href="https://note.Jsdrip.cn">Jsdrip</a></section>
             <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
         </footer>
 
