--- a/default.hbs
+++ b/default.hbs
@@ -5,43 +5,31 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     {{! Page Meta }}
-    {{custom.meta}}
-    
+    {{custom.meta}}    
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-
     {{! Styles'n'Scripts }}
+    <link rel="stylesheet" type="text/css" href="{{asset "css/bootstrap.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
-<body class="{{body_class}} nav-closed">
-
-    {{navigation}}
-
-    <div class="site-wrapper">
-
-        {{! Everything else gets inserted here }}
-        {{{body}}}
-
-        <footer class="site-footer clearfix">
-            <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>    
-            <section class="poweredby">Ghostium Theme by <a href="https://note.Jsdrip.cn">Jsdrip</a></section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
-        </footer>
-
-    </div>
-
-    {{! Ghost outputs important scripts and data with this tag }}
-    {{ghost_foot}}
-
-    {{! The main JavaScript file for Jsdrip }}
-    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
-
+<body class="{{body_class}}">
+    <div class="container-fluid">
+        <div class="row">
+            {{! Ghost outputs navigation}}
+            <div class="col-lg-3 visible-lg-block">{{navigation}}</div>
+            {{! Ghost outputs body}}
+            <div class="col-lg-6">{{{body}}}</div>
+        </div>
+        <div class="row">{{custom.footer}}</div>
+    </div>   
+{{ghost_foot}}
+{{! The main JavaScript file for Jsdrip }}
+<script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 </body>
 </html>
