--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,5 @@
-<footer class="site-footer clearfix">
+<footer class="clearfix">
     <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>    
-    <section class="poweredby">Ghostium Theme by <a href="https://note.Jsdrip.cn">Jsdrip</a></section>
+    <section class="themeby">Jsdrip Theme by <a href="https://note.Jsdrip.cn">Jsdrip-Ghost-Theme</a></section>
     <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
 </footer>
