--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -14,5 +14,9 @@
 	</h6>
 <div>
 <div class="row">
-	
+    <ul>
+        {{#foreach navigation}}
+            <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
+        {{/foreach}}
+    </ul>
 </div>
