--- a/default.hbs
+++ b/default.hbs
@@ -19,6 +19,7 @@
     {{ghost_head}}
 </head>
 <body class="{{body_class}}">
+    <img src="{{@blog.logo}}" />
     <div class="container-fluid">
         <div class="row">
             {{! Ghost outputs navigation}}
