--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,7 @@
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
-<body class="{{body_class}}">
+<body class="{{body_class}}  aa">
     <img src="{{@blog.logo}}" />
     <div class="container-fluid">
         <div class="row">
