--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
             {{! Ghost outputs body}}
             <div class="col-lg-6">{{{body}}}</div>
         </div>
-        <div class="row">{{> custom/footer}}</div>
+        <div class="row">{{> footer}}</div>
     </div>   
 {{ghost_foot}}
 {{! The main JavaScript file for Jsdrip }}
