--- a/partials/custom/meta.hbs
+++ b/partials/custom/meta.hbs
@@ -1,4 +1,4 @@
 {{! The username of the author of this content }}
-<meta name="author" content="@yourname">
+<meta name="author" content="Jetsly@live.cn">
 {{! The keywords of the author of this content }}
-<meta name="keywords" content="@your keywords" />
+<meta name="keywords" content="jsdrip,点滴,日记,点滴日记,技术点滴,点点滴滴" />
