--- a/default.hbs
+++ b/default.hbs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh">
+{{! Ghost outputs head}}
 {{> head}}
+
 <body class="{{body_class}}">
     <div class="container-fluid">
         <div class="row">
@@ -9,7 +11,11 @@
             {{! Ghost outputs body}}
             <div class="col-lg-6">{{{body}}}</div>
         </div>
-        <div class="row">{{> footer}}</div>
+        <div class="row">
+          {{! Ghost outputs footer}}
+          {{> footer}}
+        
+        </div>
     </div>   
 {{ghost_foot}}
 {{! The main JavaScript file for Jsdrip }}
