--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -5,14 +5,14 @@
  		</a>
  	</div>
  	<div class="row">
- 		<h5>
- 			<p>{{@blog.title}}</p>
- 		</h5>
+ 		<h5><small>{{@blog.title}}</small></h5>
  	</div>
  	<div class="row">
  		<h6 class="page-header">
  			<p class="text-muted">{{@blog.description}}</p>
- 	</h6>
- <div>
+ 	    </h6>
+ 	</div>
+ 	{{! Ghost outputs navigation}}
+ 	{{navigation}}
+
 </div>
-{{navigation}}
