--- a/default.hbs
+++ b/default.hbs
@@ -17,7 +17,7 @@
         
         </div>
     </div>   
-{{ghost_foot}}
+{{ghost_foot jquery=false}}
 {{! The main JavaScript file for Jsdrip }}
 <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 </body>
