--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
             {{! Ghost outputs body}}
             <div class="col-lg-6">{{{body}}}</div>
         </div>
-        <div class="row">
+        <div class="row site-info">
           {{! Ghost outputs footer}}
           {{> footer}}
         
