--- a/default.hbs
+++ b/default.hbs
@@ -10,6 +10,8 @@
             {{> sidebar}}
             {{! Ghost outputs body}}
             <div class="col-lg-6">{{{body}}}</div>
+            {{! Ghost outputs widget}}
+            {{> widget}}
         </div>
         <div class="row site-info">
           {{! Ghost outputs footer}}
