--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,4 +1,5 @@
- <div class="col-lg-3 visible-lg-block">
+<div class="col-lg-1 site-actions"></div>
+<div class="col-lg-3 visible-lg-block">
  	<div class="row">
  		<a href="{{@blog.url}}">
  			<img src="{{@blog.logo}}" alt="" class="img-circle">
