--- a/default.hbs
+++ b/default.hbs
@@ -5,6 +5,7 @@
 
 <body class="{{body_class}}">
     <div class="container-fluid">
+        <div class="site-actions"></div>
         <div class="row">
             {{! Ghost outputs sidebar}}
             {{> sidebar}}
