--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,3 +1,17 @@
+@media (min-width: 1200px){
+	.site-actions + .container-fluid {
+		padding: 80px 40px 0;
+	}
+}
+@media (min-width: 992px) {
+
+}
+@media (min-width: 768px) {
+
+}
+@media screen and (max-width: 767px){
+	
+}
 
 .site-actions{
 	position: fixed;
