--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <ul>
+    <ul class="list-unstyled">
         {{#foreach navigation}}
             <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
         {{/foreach}}
