--- a/default.hbs
+++ b/default.hbs
@@ -4,7 +4,11 @@
 {{> head}}
 
 <body class="{{body_class}}">
-    <div class="site-actions"></div>
+    <div class="site-actions">
+        <a class="back-top">
+          <i class="icon-chevron-up"></i>
+        </a>
+    </div>
     <div class="container-fluid">
         <div class="row">
             {{! Ghost outputs sidebar}}
