--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,9 +1,13 @@
 <div class="col-lg-3 visible-lg-block">
-	<div class="row">
-		<a href="{{@blog.url}}">
-			<img src="{{@blog.logo}}" alt="" class="img-circle">
-		</a>
-		<h4><small>{{@blog.title}}</small></h5>
+	<div class="row site-sidebar">
+		<div>
+			<a href="{{@blog.url}}">
+				<img src="{{@blog.logo}}" alt="" class="img-circle">
+			</a>
+			<h4>
+				<small>{{@blog.title}}</small>
+			</h4>
+		</div>		
 		<h6 class="page-header">
 			<p class="text-muted">{{@blog.description}}</p>
 		</h6>
