--- a/default.hbs
+++ b/default.hbs
@@ -6,7 +6,7 @@
 <body class="{{body_class}}">
     <div class="site-actions">
         <a class="back-top">
-          <i class="icon-chevron-up"></i>
+           <i class="fa fa-arrow-up"></i>
         </a>
     </div>
     <div class="container-fluid">
@@ -14,7 +14,7 @@
             {{! Ghost outputs sidebar}}
             {{> sidebar}}
             {{! Ghost outputs body}}
-            <div class="col-lg-6">{{{body}}}</div>
+            <div class="col-lg-6 site-content" >{{{body}}}</div>
             {{! Ghost outputs widget}}
             {{> widget}}
         </div>
