--- a/partials/head.hbs
+++ b/partials/head.hbs
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/bootstrap.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
