--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,7 +12,25 @@
 @media screen and (max-width: 767px){
 
 }
-
+/**common**/
+a{
+	color: #000;
+}
+a:hover,.nav-current a{
+	color: #7cc576;
+}
+/**base**/
+.site-info{
+	border-top: 5px solid #333;
+	width: 100%;
+	padding: 20px 0 40px;
+	border-top: 5px solid #333;
+	font-size: 12px;
+	line-height: 20px;
+	color: #aaa;
+	background: #fff;
+}
+/**actions**/
 .site-actions{
 	position: fixed;
 	width: 40px;
@@ -30,6 +48,7 @@
 	bottom: 0px;
 	cursor: pointer;
 	color: #444;
+	border-top: 1px solid #333;
 	transition: color .3s, background-color .3s;
 }
 .back-top:hover span,
@@ -37,21 +56,36 @@
 	color: #fff;
 	background: #111;
 }
+/**sidebar**/
 .site-sidebar{
 	padding-right: 44px;
 }
-
-.site-content{
-
-}
-
-.site-info{
-	border-top: 5px solid #333;
-	width: 100%;
-	padding: 20px 0 40px;
-	border-top: 5px solid #333;
+.site-nav li{
+	overflow: hidden;
+	position: relative;
+	margin-top: 10px;
+	text-transform: uppercase;
 	font-size: 12px;
 	line-height: 20px;
-	color: #aaa;
-	background: #fff;
+}
+
+.site-content{
+    margin-left: 30px;
+}
+/**post**/
+.post-list{
+	margin-bottom: 80px;
+}
+.more-like{
+	display: block;
+	margin-top: 30px;
+}
+.more-like span{
+	background-color: #333;
+	color: #fff;	
+	transition: all 0.3s;
+}
+.more-like:hover span{
+	background-color: #7cc576;
+	color: #fff;
 }
