--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,4 +1,4 @@
-<ul class="list-unstyled">
+<ul class="list-unstyled site-nav">
     {{#foreach navigation}}
       <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
     {{/foreach}}
