--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -76,6 +76,18 @@ a:hover,.nav-current a{
 .post-list{
 	margin-bottom: 80px;
 }
+.post-meta{
+	margin-bottom: 30px;
+}
+.post-links{
+
+}
+.post-sep{
+	display: block;
+	border-top: 1px solid #ececec;
+	position: relative;
+	margin: 15px 60px 10px 0;
+}
 .more-like{
 	display: block;
 	margin-top: 30px;
