--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -10,7 +10,11 @@
 
 }
 @media screen and (max-width: 767px){
-
+   	.site-sidebar aside{
+		padding-top: 15px;
+		margin-top: 15px;
+		border-top: 1px solid #e5e5e5;
+	}
 }
 /**common**/
 a{
@@ -68,16 +72,25 @@ a:hover,.nav-current a{
 	font-size: 12px;
 	line-height: 20px;
 }
-
+.site-sidebar aside{
+	padding-top: 35px;
+	margin-top: 35px;
+	border-top: 1px solid #e5e5e5;
+}
+/**post**/
 .site-content{
     margin-left: 30px;
 }
-/**post**/
+
 .post-list{
 	margin-bottom: 80px;
 }
 .post-meta{
 	margin-bottom: 30px;
+	color: #aaa;
+}
+.post-meta a {
+	color: #7cc576;
 }
 .post-links{
 
@@ -87,6 +100,24 @@ a:hover,.nav-current a{
 	border-top: 1px solid #ececec;
 	position: relative;
 	margin: 15px 60px 10px 0;
+}
+.post-sep span{
+	position: absolute;
+	right: -50px;
+	top: -25px;
+	padding: 5px;
+	background: #f5f5f5;
+}
+.post-sep i{
+	width: 38px;
+	height: 38px;
+	border: 1px solid #e5e5e5;
+	text-align: center;
+	line-height: 38px;
+	background: #fff;
+}
+.post-date i{
+	margin-right: 5px;
 }
 .more-like{
 	display: block;
