--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,5 +1,5 @@
 <div class="col-lg-2 visible-lg-block">
-	<div class="row site-sidebar">
+	<div class="row site-sidebar">	
 		<div>
 			<a href="{{@blog.url}}">
 				<img src="{{@blog.logo}}" alt="" class="img-circle">
@@ -8,10 +8,12 @@
 				<small>{{@blog.title}}</small>
 			</h4>
 		</div>		
-		<h6 class="page-header">
+		<h6>
 			<p class="text-muted">{{@blog.description}}</p>
 		</h6>
-		{{! Ghost outputs navigation}}
-		{{navigation}}
+		<aside>
+			{{! Ghost outputs navigation}}
+			{{navigation}}
+		</aside>
 	</div>
 </div>
