--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -15,5 +15,9 @@
 			{{! Ghost outputs navigation}}
 			{{navigation}}
 		</aside>
+		<aside>
+		    {{! Ghost outputs tag_cloud}}
+			{{tag_cloud limit="all"}}
+		</aside>
 	</div>
 </div>
