--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -16,6 +16,7 @@
 			{{navigation}}
 		</aside>
 		<aside>
+		    <h3>Categories</h3>
 		    {{! Ghost outputs tag_cloud}}
 			{{tag_cloud limit="all"}}
 		</aside>
