--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,5 +1,5 @@
 <ul class="list-unstyled site-nav">
     {{#foreach navigation}}
-      <li class="{{#if current}} nav-current{{/if}}"><a href="{{url absolute="true"}}">{{label}}</a></li>
+      <li class="{{#if current}} nav-current{{/if}}"><a href="{{url}}">{{label}}</a></li>
     {{/foreach}}
 </ul>
