--- a/default.hbs
+++ b/default.hbs
@@ -5,6 +5,9 @@
 
 <body class="{{body_class}}">
     <div class="site-actions">
+        <a class="site-bars">
+           <i class="fa fa-bars"></i>
+        </a>
         <a class="back-top">
            <i class="fa fa-arrow-up"></i>
         </a>
@@ -24,7 +27,7 @@
         
         </div>
     </div>   
-{{ghost_foot jquery=false}}
+    {{ghost_foot jquery=false}}
 {{! The main JavaScript file for Jsdrip }}
 <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 </body>
