--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,3 +1,3 @@
-<section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>    
+<section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}} 浙ICP备15005237号-1</section>    
 <section class="themeby">Jsdrip Theme by <a href="https://note.Jsdrip.cn">Jsdrip-Ghost-Theme</a></section>
 <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
