--- a/post.hbs
+++ b/post.hbs
@@ -1,4 +1,5 @@
 {{!< default}}
+{{#post}}
 <article id="{{id}}" class="row">
 	<header class="post-header">	    
 		<h2><a href="{{url}}">{{title}}</a></h2>
@@ -13,8 +14,8 @@
 			</div>
 		</div>		
 	</header>
-	<section class="post-excerpt">
-		<p>{{excerpt words="40"}}</p>
-        <a href="{{url}}" class="more-like"><span class="btn btn-small">Continue Reading</span></a>
+	<section class="post-content">
+		<p>{{content}}</p>
 	</section>
 </article>
+{{/post}}
