--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -15,7 +15,7 @@
 	</header>
 	<section class="post-excerpt">
 		<p>{{excerpt words="40"}}</p>
-        <a href="{{url}}" class="more-like"><span class="btn btn-small">Continue Reading</span></a>
+        <a href="{{url}}" class="more-like"><span class="btn btn-small">继续阅读</span></a>
 	</section>
 </article>
 {{/foreach}}
