--- a/page.hbs
+++ b/page.hbs
@@ -1,21 +1,2 @@
 {{!< default}}
-{{#post}}
-<article id="{{id}}" class="row">
-	<header class="post-header">	    
-		<h2><a href="{{url}}">{{title}}</a></h2>
-		<div class="post-meta">
-			<div class="post-links">By {{author}} {{tags prefix=" in "}} </div>
-			<div class="post-sep">
-				<span class="img-circle"><i class="fa fa-file-text img-circle"></i></span>
-			</div>
-			<div class="post-date">
-				<i class="fa fa-calendar-o"></i>
-				{{date published_at format="MMMM DD, YYYY"}}
-			</div>
-		</div>		
-	</header>
-	<section class="post-content">
-		<p>{{content}}</p>
-	</section>
-</article>
-{{/post}}
+about
