--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -15,7 +15,7 @@
 		height: 100%;
 		left: 0;
 	}	
-	.site-sidebar aside{
+	aside.widget{
 		padding-top: 35px;
 		margin-top: 35px;
 		border-top: 1px solid #e5e5e5;
@@ -23,7 +23,7 @@
 }
 @media screen and (max-width: 767px){
 	.site-actions + .container-fluid {		
-		padding: 40px 20px;
+		padding: 40px 15px;
 		padding-bottom: 10px;
 	}
 	.site-actions{	
@@ -34,7 +34,7 @@
 	.back-top{
 		display: none !important;
 	}
-	.site-sidebar aside{
+	aside.widget{
 		padding-top: 15px;
 		margin-top: 15px;
 		border-top: 1px solid #e5e5e5;
