--- a/partials/widget.hbs
+++ b/partials/widget.hbs
@@ -1,1 +1,10 @@
- <div class="col-lg-2"></div>
+<aside>
+	<div class="row">
+		<div class="col-sm-6"></div>
+		<div class="col-sm-6"></div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6"></div>
+		<div class="col-sm-6"></div>
+	</div>
+</aside>
