modify code css

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -51,6 +51,9 @@ a{
 a:hover,.nav-current a{
 	color: #7cc576;
 }
+code{
+	word-break: break-word;
+}
 /**base**/
 .site-info{
 	padding: 20px 0 40px;
