--- a/partials/widget.hbs
+++ b/partials/widget.hbs
@@ -1,10 +1,5 @@
 <aside>
 	<div class="row">
-		<div class="col-sm-6"></div>
-		<div class="col-sm-6"></div>
-	</div>
-	<div class="row">
-		<div class="col-sm-6"></div>
-		<div class="col-sm-6"></div>
+		<a style="display:none!important" id="tanx-a-mm_109076080_8994641_30312366"></a>
 	</div>
 </aside>
