--- a/partials/widget.hbs
+++ b/partials/widget.hbs
@@ -1,5 +1,3 @@
-<aside>
-	<div class="row">
-		<a style="display:none!important" id="tanx-a-mm_109076080_8994641_30312366"></a>
-	</div>
-</aside>
+<div class="row ad">
+	<a style="display:none!important" id="tanx-a-mm_109076080_8994641_30312366"></a>
+</div>
