--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,7 +1,7 @@
 @media (min-width: 1200px) {
     .site-bars{
     	display: none !important
-    }
+    }    
 }
 @media (min-width: 992px) {
     
@@ -15,10 +15,13 @@
 		height: 100%;
 		left: 0;
 	}	
-	aside.widget{
+	aside{
 		padding-top: 35px;
 		margin-top: 35px;
 		border-top: 1px solid #e5e5e5;
+	}
+	.site-widget {
+   		display: block  !important;
 	}
 }
 @media screen and (max-width: 767px){
@@ -34,7 +37,7 @@
 	.back-top{
 		display: none !important;
 	}
-	aside.widget{
+	aside{
 		padding-top: 15px;
 		margin-top: 15px;
 		border-top: 1px solid #e5e5e5;
@@ -53,6 +56,9 @@ a:hover,.nav-current a{
 }
 code{
 	word-break: break-word;
+}
+.site-widget {
+    display: none;
 }
 /**base**/
 .site-info{
