--- a/default.hbs
+++ b/default.hbs
@@ -19,7 +19,7 @@
             {{! Ghost outputs body}}
             <div class="col-lg-6 site-content" >{{{body}}}</div>
             {{! Ghost outputs widget}}
-            <div class="col-lg-3">{{> widget}}</div>
+            <div class="col-lg-3 site-widget">{{> widget}}</div>
         </div>
         <div class="row site-info">
           {{! Ghost outputs footer}}
