--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -10,11 +10,11 @@
 	<h6>
 		<p class="text-muted">{{@blog.description}}</p>
 	</h6>
-	<aside class="widget">
+	<aside>
 		{{! Ghost outputs navigation}}
 		{{navigation}}
 	</aside>
-	<aside class="widget">
+	<aside>
 	    <h3>Categories</h3>
 	    {{! Ghost outputs tag_cloud}}
 	 	{{tag_cloud limit="all"}}
