--- a/default.hbs
+++ b/default.hbs
@@ -17,7 +17,7 @@
             {{! Ghost outputs sidebar}}
             <div class="col-lg-2 visible-lg-block">{{> sidebar}}</div>
             {{! Ghost outputs body}}
-            <div class="col-lg-6 site-content" >{{{body}}}</div>
+            <div class="col-lg-6 site-content col-md-11" >{{{body}}}</div>
             {{! Ghost outputs widget}}
             <div class="col-lg-3 site-widget">{{> widget}}</div>
         </div>
