--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="row">
             {{! Ghost outputs sidebar}}
-            <div class="col-lg-2 visible-lg-block">{{> sidebar}}</div>
+            <div class="col-lg-2 site-sidebar">{{> sidebar}}</div>
             {{! Ghost outputs body}}
             <div class="col-lg-6 site-content col-md-11" >{{{body}}}</div>
             {{! Ghost outputs widget}}
