--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,4 +1,4 @@
-<div class="row site-sidebar">	
+<div class="row">	
 	<div>
 		<a href="{{@blog.url}}">
 			<img src="{{@blog.logo}}" alt="" class="img-circle">
