--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -76,6 +76,7 @@
 	-moz-transition: -moz-transform 500ms;
 	-o-transition: -o-transform 500ms;
 	transition: transform 500ms;
+	background: #fff;
 }
 a{
 	color: #000;
