--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,68 +1,3 @@
-@media (min-width: 1200px) {
-    .site-bars{
-    	display: none !important
-    }    
-    .site-widget,.site-sidebar{
-   		display: block  !important;
-	}
-	.nav-show .site-content,
-	.nav-show .site-info,
-	.nav-show .site-actions{
-		-webkit-transform: translateX(0px);
-		-moz-transform: translateX(0px);
-		-ms-transform: translateX(0px);
-		-o-transform: translateX(0px);
-		transform: translateX(0px);
-	}
-}
-@media (min-width: 992px) {
-    
-}
-@media (min-width: 768px) {
-   	.site-actions + .container-fluid {
-		padding: 40px 95px;
-	}	
-	.site-actions{
-		width: 40px;
-		height: 100%;
-		left: 0;
-	}	
-	aside{
-		padding-top: 35px;
-		margin-top: 35px;
-		border-top: 1px solid #e5e5e5;
-	}
-}
-@media screen and (max-width: 767px){
-	.site-actions + .container-fluid {		
-		padding: 40px 15px;
-		padding-bottom: 10px;
-	}
-	.site-actions{	
-		height: 40px;
-		width: 100%;
-		top: 0;
-	}
-	.back-top{
-		display: none !important;
-	}
-	aside{
-		padding-top: 15px;
-		margin-top: 15px;
-		border-top: 1px solid #e5e5e5;
-	}
-	.site-info{
-		margin: 0 20px;
-	}
-	.nav-show .site-actions{
-		-webkit-transform: translateX(240px);
-		-moz-transform: translateX(240px);
-		-ms-transform: translateX(240px);
-		-o-transform: translateX(240px);
-		transform: translateX(240px);
-	}
-}
-
 /**common**/
 .site-sidebar{
 	display: none;
@@ -78,6 +13,7 @@
 .nav-show .site-sidebar{
 	width: 200px;
   	display: block;
+  	position: absolute;
 }
 .site-content,.site-info,.site-actions{
 	-webkit-transform: translateX(0);
@@ -90,6 +26,9 @@
 	-o-transition: -o-transform 500ms;
 	transition: transform 500ms;
 	background: #fff;
+}
+.nav-show .container-fluid{
+	overflow-y: hidden;
 }
 a{
 	color: #000;
@@ -206,7 +145,7 @@ code{
 	line-height: 25px;
 }
 .more-like{
-	display: block;
+	display: inline-block;
 	margin-top: 30px;
 }
 .more-like span{
@@ -217,4 +156,72 @@ code{
 .more-like:hover span{
 	background-color: #7cc576;
 	color: #fff;
+}
+@media (min-width: 1200px) {
+    .site-bars{
+    	display: none !important
+    }    
+    .site-widget,.site-sidebar{
+   		display: block  !important;
+	}
+	.nav-show .site-content,
+	.nav-show .site-info,
+	.nav-show .site-actions{
+		-webkit-transform: translateX(0px);
+		-moz-transform: translateX(0px);
+		-ms-transform: translateX(0px);
+		-o-transform: translateX(0px);
+		transform: translateX(0px);
+	}
+	.nav-show .site-sidebar{
+		width: auto;
+	  	display: block;
+	}
+}
+@media (min-width: 992px) {
+    
+}
+@media (min-width: 768px) {
+   	.site-actions + .container-fluid {
+		padding: 40px 95px;
+	}	
+	.site-actions{
+		width: 40px;
+		height: 100%;
+		left: 0;
+	}	
+	aside{
+		padding-top: 35px;
+		margin-top: 35px;
+		border-top: 1px solid #e5e5e5;
+	}
+}
+@media screen and (max-width: 767px){
+	.site-actions + .container-fluid {		
+		padding: 40px 15px;
+		padding-bottom: 10px;
+	}
+	.site-actions{	
+		height: 40px;
+		width: 100%;
+		top: 0;
+	}
+	.back-top{
+		display: none !important;
+	}
+	aside{
+		padding-top: 15px;
+		margin-top: 15px;
+		border-top: 1px solid #e5e5e5;
+	}
+	.site-info{
+		margin: 0 20px;
+	}
+	.nav-show .site-actions{
+		-webkit-transform: translateX(240px);
+		-moz-transform: translateX(240px);
+		-ms-transform: translateX(240px);
+		-o-transform: translateX(240px);
+		transform: translateX(240px);
+	}
 }
