--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -225,4 +225,7 @@ code{
 		-o-transform: translateX(240px);
 		transform: translateX(240px);
 	}
+	.nav-show .site-sidebar{
+		padding-left: 60px;
+	}
 }
