--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -18,7 +18,7 @@
   	display: block;
   	position: absolute;
 }
-.site-content,.site-actions{
+.site-content,.site-actions,.site-bars{
 	-webkit-transform: translateX(0);
 	-moz-transform: translateX(0);
 	-ms-transform: translateX(0);
@@ -166,7 +166,8 @@ code{
    		display: block  !important;
 	}
 	.nav-show .site-content,
-	.nav-show .site-actions{
+	.nav-show .site-actions,
+	.nav-show .site-bars{
 		-webkit-transform: translateX(0px);
 		-moz-transform: translateX(0px);
 		-ms-transform: translateX(0px);
@@ -224,7 +225,8 @@ code{
 	.site-info{
 		margin: 0 20px;
 	}
-	.nav-show .site-actions{
+	.nav-show .site-actions,
+	.nav-show .site-bars{
 		-webkit-transform: translateX(240px);
 		-moz-transform: translateX(240px);
 		-ms-transform: translateX(240px);
