--- a/page-contact.hbs
+++ b/page-contact.hbs
@@ -1,2 +1,21 @@
 {{!< default}}
-contact
+{{#post}}
+<article id="{{id}}" class="row">
+	<header class="post-header">	    
+		<h2><a href="{{url}}">{{title}}</a></h2>
+		<div class="post-meta">
+			<div class="post-links">By {{author}} {{tags prefix=" in "}} </div>
+			<div class="post-sep">
+				<span class="img-circle"><i class="fa fa-file-text img-circle"></i></span>
+			</div>
+			<div class="post-date">
+				<i class="fa fa-calendar-o"></i>
+				{{date published_at format="MMMM DD, YYYY"}}
+			</div>
+		</div>		
+	</header>
+	<section class="post-content">
+		{{content}}
+	</section>
+</article>
+{{/post}}
