--- a/partials/head.hbs
+++ b/partials/head.hbs
@@ -10,7 +10,7 @@
     
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+    <link rel="shortcut icon" href="{{asset "img/favicon.ico"}}">
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/bootstrap.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}" />
